# webyx-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  openenv.yaml  prompt.txt  pyproject.toml  requirements.txt  variance_check.py  webyx_ui.py
server/: __init__.py  app.py  requirements.txt  webyx_ui.html  webyx_ui.py
tests/: test_env.py
webyx_env/: .dockerignore  README.md  client.py  models.py  openenv.yaml  pyproject.toml
webyx_env/server/: Dockerfile  app.py  webyx_env_environment.py  webyx_ui.py
